# rust-build.test

./: Cargo.toml  README.md  pre_build.sh
.github/workflows/: build.yml
assets/dir/: test
hello/: Cargo.toml
test/: post_build.sh
